--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
       <div class="nav">
          <div class="container">
             <ul class="pull-left">
-               <li><a href="#">Softwere workshop</a></li>
+               <li><a href="#">Softwere Forum</a></li>
                <li><a href="#">Browser</a></li>
             </ul>
 
@@ -31,7 +31,7 @@
 
       <div class="jumbotron">
          <div class="container">
-            <h1>Challenge to a new action</h1>
+            <h1>Sofken Forum</h1>
             <p>You're never alone.
                Find people that have same your vition and go a new future!</p>
             <p><a href="#">Learn More</a></p>
@@ -75,6 +75,5 @@
          </div>
       </div>
    </body>
-
 
 </html>
