--- a/client/index.html
+++ b/client/index.html
@@ -19,8 +19,10 @@
    
 
    <body>
+
       <div class="nav">
          <div class="container">
+
             <ul class="pull-left">
                <li><a href="#">Softwere Forum</a></li>
                <li><a href="#">Browser</a></li>
@@ -31,15 +33,15 @@
                <li><a href="#">Log In</a></li>
                <li><a href="#">Help</a></li>
             </ul>
+
          </div>
       </div>
 
 
       <div class="jumbotron">
          <div class="container">
+            <p>Dreams, Freedom, Future with our hands!</p>
             <h1>Sofken Forum</h1>
-            <p></p>
-            <p><a href="#">Learn More</a></p>
          </div>
       </div>
 
@@ -68,9 +70,12 @@
                      we've got your back.</p>
                   <p><a href="#">Learn about trust at Airbnb</a></p>
                </div>
+
             </div>
          </div>
       </div>
+
+
    </body>
 
 </html>
