--- a/client/index.html
+++ b/client/index.html
@@ -52,23 +52,18 @@
 
                <div class="col-md-4">
                   <h3>Sofken</h3>
-                  <p>From apartments and rooms to treehouses and boats:
-                     stay in unique spaces in 192 countries.</p>
-                  <p><a href="#">See how to travel on Airbnb</a></p>
+                  <p></p>
+                  <p><a href="#">See how to use Sofken Forum</a></p>
                </div>
 
                <div class="col-md-4">
                   <h3>Services</h3>
-                  <p>Renting out your unused space could pay your bills or
-                     found your next vacation.</p>
-                  <p><a href="#">Learn more about hosting</a></p>
+                  <p><a href="#">Learn about programming</a></p>
                </div>
 
                <div class="col-md-4">
                   <h3>Links</h3>
-                  <p>From Varified ID to our worldwide customer support team,
-                     we've got your back.</p>
-                  <p><a href="#">Learn about trust at Airbnb</a></p>
+                  <p><a href="#"></a></p>
                </div>
 
             </div>
