--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 
    <head>
       <meta charset="UTF-8">
+      <title>Sofken Forum</title>
       <link 
          rel="stylesheet" 
          href="http://duho.sofkenforum.com/bower_components/bootstrap/dist/css/bootstrap.css">
@@ -40,8 +41,11 @@
 
       <div class="jumbotron">
          <div class="container">
-            <p>Dreams, Freedom, Future with our hands!</p>
+            <p id="top">Dreams, Freedom, Future with our hands!</p>
             <h1>Sofken Forum</h1>
+            <a href="https://www.flickr.com/photos/danielfoster/14213975887/in/photolist-eyPV46-agJZTj-5er7Fe-4HGC59-5c98n1-6RatpM-fEKA4t-nE3kPM-FMsWd-hoAtp-avqZf8-fpmM79-6CVDX-bHVP3-5XRNJC-8mxeRr-5f3fxS-33BVoG-daGT9K-cyJALb-kMbom-7Efwam-9qUAup-9rcSBZ-eeigiy-8S83NL-9Twsrz-px8hdd-97apYs-7zpr87-7KbCQT-rpuW5A-8rgt6g-dnf1dp-c2iCA-7pqdLo-99UsVX-8mxD1n-arwdEA-NyLdP-9AsTM3-9uU28Q-9Fnidv-8mCcC7-8mAPA3-8eKnR1-CWBqU-5mP1to-8z476d-cudfXE">
+               <p id="link">www.flickr.com</p>
+            </a>
          </div>
       </div>
 
