--- a/client/index.html
+++ b/client/index.html
@@ -12,15 +12,14 @@
       <title>Sofken Forum</title>
       <link 
          rel="stylesheet" 
-         href="http://duho.sofkenforum.com/bower_components/bootstrap/dist/css/bootstrap.css">
+         href="http://duho.sofkenforum.com.client/bower_components/bootstrap/dist/css/bootstrap.css">
       <link 
          rel="stylesheet" 
-         href="http://duho.sofkenforum.com/css/style.css">
+         href="http://duho.sofkenforum.com.client/css/style.css">
    </head>
    
 
    <body>
-
       <div class="nav">
          <div class="container">
 
@@ -70,8 +69,6 @@
             </div>
          </div>
       </div>
-
-
    </body>
 
 </html>
